--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -10,6 +10,16 @@
         <Setter Property="FontSize" Value="16" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
+    <!--  Session settings buttons.  -->
+    <Style
+        x:Key="SessionParametersToggleButton"
+        BasedOn="{StaticResource {x:Type ToggleButton}}"
+        TargetType="ToggleButton">
+        <Setter Property="Height" Value="32" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
+        <Setter Property="FontSize" Value="16" />
+    </Style>
     <!--  Session window.  -->
     <!--  Control buttons.  -->
     <Style
