--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -16,9 +16,11 @@
         BasedOn="{StaticResource {x:Type ToggleButton}}"
         TargetType="ToggleButton">
         <Setter Property="Height" Value="32" />
-        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="Width" Value="32" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
         <Setter Property="FontSize" Value="16" />
+        <Setter Property="Padding" Value="0" />
     </Style>
     <!--  Session window.  -->
     <!--  Control buttons.  -->
